# stick-adventure

./: Cargo.toml
.github/workflows/: ci.yaml
assets/settings/: schema.json  settings.json
src/: enemy.rs  enemy_spawner.rs  events.rs  main.rs  music.rs  player.rs  score.rs  stick.rs
src/common/: events.rs  get_rand_screen_pos.rs  mod.rs
src/entities/: enemy.rs  mod.rs  player.rs  stick.rs
src/systems/: enemy_spawner.rs  game_settings.rs  mod.rs  music.rs  score.rs
src/ui/: app_ui_plugin.rs  constants.rs  mod.rs  music_status.rs  score_text.rs
